# Silhouette

./: CMakeLists.txt  README.md
examples/: BCCZ.stl  Cubic.stl  buckle.stl  buckle.stl:Zone.Identifier  buckle_simple.stl  simple_cube.stl  simple_two_cube.stl  test_cone.stl  test_cube.stl  test_cylinder.stl  test_sphere.stl  test_tube.stl
include/: BasisTransformation.h  CmdLine.h  Declustering.h  FindVisible.h  PolygonToVTK.h  STLReader.h  Triangle.h  Triangles.h  graph.h
src/: BasisTransformation.cpp  CmdLine.cpp  Declustering.cpp  FindVisible.cpp  PolygonToVTK.cpp  STLReader.cpp  Triangle.cpp  Triangles.cpp  main.cpp
